// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider components-separator wp-components-separator css-4k25og"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider components-separator wp-components-separator css-h9ycj5"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider components-separator wp-components-separator css-1iogq64"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="components-divider wp-components-divider components-separator wp-components-separator css-phtam2"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;
